<?xml version="1.0"?>
<package format="2">
<name>path_planner</name>
<version>0.1.0</version>
<description>mowito_assignment</description>
<maintainer email="bajaj590@gmail.com">Kewal bajaj</maintainer>
<license>BSD</license>
<author email="bajaj590@gmail.com">Kewal Bajaj</author>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>geometry_msgs</depend>
<depend>visualization_msgs</depend>
<depend>turtlesim</depend>

</package>
